deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    k8s-app: traefik-ingress-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: traefik-ingress-controller
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-controller
        name: traefik-ingress-controller
        namespace: traefik
    spec:
      serviceAccountName: traefik-ingress-serviceaccount
      volumes:
        - name: acme
          hostPath:
            path: /srv/configs
      containers:
      - image: traefik
        name: traefik-ingress-controller
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /acme
            name: acme
        ports:
        - name: web
          containerPort: 80
        - name: web-secure
          containerPort: 443
        - name: dashboard
          containerPort: 8080
        args:
        - --accesslog
        - --api.insecure
        - --certificatesresolvers.default.acme.email=admin@how2die.com
        - --certificatesresolvers.default.acme.httpchallenge.entrypoint=web
        - --certificatesresolvers.default.acme.storage=/acme/acme.json
        - --entrypoints.web.address=:80
        - --entrypoints.web-secure.address=:443
        - --entrypoints.traefik.address=:8080
        - --global.checknewversion
        - --global.sendanonymoususage
        - --log
        - --log.level=DEBUG
        - --ping
        - --ping.entrypoint=web
        - --providers.kubernetescrd
        - --serverstransport.insecureskipverify
   
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller-http-service
  namespace: traefik
spec:
  selector:
    k8s-app: traefik-ingress-controller
  ports:
  - protocol: TCP
    name: web
    port: 80
    nodePort: 31029
  - protocol: TCP
    name: web-secure
    port: 443
    nodePort: 32702
  type: NodePort

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller-dashboard-service
  namespace: traefik
spec:
  selector:
    k8s-app: traefik-ingress-controller
  ports:
  - port: 8080
    name: dashboard
